first flag displayed

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "ts-flags-api",
   "version": "1.0.0",
   "description": "### setup and installation",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server"
   },
   "repository": {
