--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "### setup and installation",
   "main": "app.js",
   "scripts": {
-    "start": "lite-server"
+    "start-ls": "lite-server",
+    "build": "webpack --config webpack.config.prod.js",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -17,10 +19,16 @@
   },
   "homepage": "https://github.com/AleksGeste/ts-flags-api#readme",
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.6.1",
     "live-server": "^1.2.1"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   }
 }
